[gd_scene load_steps=9 format=3 uid="uid://c0qk7ipm844jl"]

[ext_resource type="Script" path="res://scripts/objects/piece.gd" id="1_m5pt2"]
[ext_resource type="AudioStream" uid="uid://cyiqit7qquk8g" path="res://sfx/pieces/piece1.wav" id="2_843sy"]
[ext_resource type="Texture2D" uid="uid://cm3ahyioeeo2d" path="res://graphics/sprites/objects/pieces.png" id="3_e6eoy"]
[ext_resource type="AudioStream" uid="uid://dqe5q8kyv2xxw" path="res://sfx/pieces/piece2.wav" id="3_rw2yf"]
[ext_resource type="AudioStream" uid="uid://dpmx3o2r7i4kt" path="res://sfx/pieces/piece3.wav" id="4_xkapy"]
[ext_resource type="Shader" path="res://shaders/spatial shaders/sprite3d_fog.gdshader" id="5_3abac"]

[sub_resource type="BoxShape3D" id="BoxShape3D_v3c7o"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vehrt"]
render_priority = 0
shader = ExtResource("5_3abac")
shader_parameter/modulate_color = Color(1, 1, 1, 1)
shader_parameter/transparent_color = Color(1, 0, 1, 1)
shader_parameter/billboard = true
shader_parameter/albedoTex = ExtResource("3_e6eoy")
shader_parameter/is_spritesheet = false
shader_parameter/spritesheet_size = Vector2i(20, 5)
shader_parameter/sprite = Vector2i(0, 0)
shader_parameter/enable_auto_animation_x = false
shader_parameter/enable_auto_animation_y = false
shader_parameter/frame_count = 1
shader_parameter/frame_offset = 0
shader_parameter/animation_speed = 1.0

[node name="piece_root" type="Node3D"]
script = ExtResource("1_m5pt2")

[node name="piece_area" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_mask = 5

[node name="piece_collision" type="CollisionShape3D" parent="piece_area"]
shape = SubResource("BoxShape3D_v3c7o")

[node name="piece_sound1" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
stream = ExtResource("2_843sy")
volume_db = 1.0
panning_strength = 4.0
bus = &"SFX"

[node name="piece_sound2" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
stream = ExtResource("3_rw2yf")
volume_db = 1.0
panning_strength = 4.0
bus = &"SFX"

[node name="piece_sound3" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
stream = ExtResource("4_xkapy")
volume_db = 1.0
panning_strength = 4.0
bus = &"SFX"

[node name="piece_sprite" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
material_override = SubResource("ShaderMaterial_vehrt")
pixel_size = 0.015
texture = ExtResource("3_e6eoy")
hframes = 20
vframes = 5

[connection signal="body_entered" from="piece_area" to="." method="_on_piece_area_body_entered"]
